--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Demo Shop — E-commerce Sample</title>
+<title>Shopora — Online Store</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <style>
-  :root{--accent:#ff4da6;--dark:#1f1f2e;--muted:#666;--bg:#fff7fb}
+  :root{--accent:#ff4da6;--dark:#1f1f2e;--muted:#888;--bg:#fff7fb}
   *{box-sizing:border-box} 
   body{margin:0;font-family:Poppins,system-ui;background:var(--bg);color:var(--dark)}
   header{position:sticky;top:0;background:#fff;border-bottom:1px solid #eee;z-index:50}
@@ -16,71 +16,43 @@
   .spacer{flex:1}
   input[type=search]{width:50%;max-width:420px;padding:10px 12px;border:1px solid #ddd;border-radius:8px}
   .btn{background:var(--accent);color:#fff;border:0;border-radius:8px;padding:10px 14px;cursor:pointer;font-weight:600}
+  .btn.outline{background:#fff;color:var(--accent);border:2px solid var(--accent)}
   
+  /* Hero Section */
   .hero{
-    max-width:1100px;
-    margin:18px auto;
-    padding:24px;
-    border-radius:14px;
-    display:grid;
-    grid-template-columns:1.4fr .6fr;
-    gap:20px;
+    max-width:1100px;margin:18px auto;padding:24px;border-radius:14px;
+    display:grid;grid-template-columns:1.4fr .6fr;gap:20px;
     background:linear-gradient(135deg,#fff0f7 0%,#ffffff 100%);
     box-shadow:0 4px 20px rgba(0,0,0,0.05);
-    position:relative;
-    overflow:hidden;
+    position:relative;overflow:hidden;
   }
-  .hero::before{
-    content:"";
-    position:absolute;
-    top:-40px; right:-40px;
-    width:200px; height:200px;
-    background:radial-gradient(circle,rgba(255,77,166,0.12) 0%,transparent 70%);
-    border-radius:50%;
-  }
-  .hero h1{margin:0 0 8px;font-weight:700}
-  .pill{
-    display:inline-block;background:#ffe1f0;color:#b1005b;
-    padding:6px 12px;border-radius:999px;font-size:13px;font-weight:600;
-  }
-  .hero img{
-    width:100%; border-radius:14px; object-fit:cover;
-    box-shadow:0 6px 18px rgba(0,0,0,0.08); transition:transform .4s ease;
-  }
+  .hero::before{content:"";position:absolute;top:-40px;right:-40px;width:200px;height:200px;
+    background:radial-gradient(circle,rgba(255,77,166,0.12) 0%,transparent 70%);border-radius:50%;}
+  .hero h1{margin:0 0 8px;font-weight:700;line-height:1.15}
+  .sub{color:var(--muted);margin:8px 0 14px}
+  .cta-row{display:flex;gap:8px;flex-wrap:wrap;margin:12px 0 14px}
+  .trust{display:flex;gap:16px;flex-wrap:wrap;margin-top:6px}
+  .trust .item{display:flex;align-items:center;gap:8px;background:#fff;border:1px solid #eee;
+    border-radius:10px;padding:8px 10px;font-size:13px}
+  .hero img{width:100%;border-radius:14px;object-fit:cover;box-shadow:0 6px 18px rgba(0,0,0,0.08);transition:transform .4s ease;}
   .hero img:hover{transform:scale(1.03)}
   
- 
-  .grid{
-    max-width:1100px;margin:16px auto;
-    display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:16px; padding:0 8px 24px;
-    justify-items:center; /* center cards when few items */
-  }
-  .card{
-    background:#fff;border:1px solid #eee;border-radius:12px;overflow:hidden;
-    display:flex;flex-direction:column;
-    max-width:320px; /* prevents single item from becoming too wide */
-    width:100%;
-    transition:transform .2s ease;
-  }
-  .card:hover{ transform:translateY(-3px) }
-  .card img{
-    width:100%;
-    height:240px;            /* fixed, uniform height */
-    object-fit:cover;        /* no stretching */
-    border-bottom:1px solid #eee;
-  }
+  /* Product grid */
+  .grid{max-width:1100px;margin:16px auto;display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;padding:0 8px 24px;justify-items:center}
+  .card{background:#fff;border:1px solid #eee;border-radius:12px;overflow:hidden;
+    display:flex;flex-direction:column;max-width:320px;width:100%;transition:transform .2s ease;}
+  .card:hover{transform:translateY(-3px)}
+  .card img{width:100%;height:240px;object-fit:cover;border-bottom:1px solid #eee}
   .card .meta{padding:12px} .price{font-weight:700}
-
-  .tag{
-    font-size:12px;background:#f6f6f9;border-radius:999px;
-    padding:4px 8px;margin-right:6px;transition:.3s ease;
-  }
+  .tag{font-size:12px;background:#f6f6f9;border-radius:999px;padding:4px 8px;margin-right:6px;transition:.3s ease}
   .tag:hover{background:var(--accent);color:#fff;transform:translateY(-2px)}
   
+  /* Cart */
   .cart-dock{position:fixed;right:16px;bottom:16px}
   .cart-fab{border:0;border-radius:999px;padding:14px 16px;background:var(--accent);color:#fff;font-weight:700}
-  .panel{position:fixed;right:0;top:0;height:100%;width:340px;background:#fff;border-left:1px solid #eee;transform:translateX(100%);transition:.25s;z-index:60;display:flex;flex-direction:column}
+  .panel{position:fixed;right:0;top:0;height:100%;width:340px;background:#fff;border-left:1px solid #eee;
+    transform:translateX(100%);transition:.25s;z-index:60;display:flex;flex-direction:column}
   .panel.open{transform:none}
   .panel header{padding:12px 14px;border-bottom:1px solid #eee}
   .items{flex:1;overflow:auto;padding:12px}
@@ -91,41 +63,53 @@
   .muted{color:var(--muted);font-size:13px}
   .filters{max-width:1100px;margin:0 auto 8px;display:flex;gap:8px;flex-wrap:wrap;padding:0 8px}
   .filters .chip{padding:8px 12px;border:1px solid #eee;background:#fff;border-radius:999px;cursor:pointer}
-  @media (max-width:800px){
-    .hero{grid-template-columns:1fr}
-    input[type=search]{width:100%}
-  }
-</style>
+  @media (max-width:800px){.hero{grid-template-columns:1fr}input[type=search]{width:100%}}
 
+  /* Footer */
+  footer{background:#1f1f2e;color:#ccc;padding:40px 20px 20px;margin-top:40px}
+  .footer-content{max-width:1100px;margin:auto;display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:24px}
+  footer h3,footer h4{color:#fff;margin-bottom:12px}
+  footer p{margin:0 0 10px;font-size:14px;line-height:1.6}
+  footer ul{list-style:none;padding:0;margin:0}
+  footer ul li{margin-bottom:8px}
+  footer ul li a{color:#ccc;text-decoration:none;font-size:14px}
+  footer ul li a:hover{color:var(--accent)}
+  .social a{color:#ccc;text-decoration:none;margin-right:10px;font-size:14px}
+  .social a:hover{color:var(--accent)}
+  .copyright{text-align:center;margin-top:30px;font-size:13px;color:#777}
+</style>
 </head>
 <body>
 <header>
   <div class="nav">
-    <div class="brand">Demo Shop</div>
+    <div class="brand">Shopora</div>
     <input id="q" type="search" placeholder="Search products…"/>
     <div class="spacer"></div>
     <button class="btn" id="openCart">Cart (<span id="cartCount">0</span>)</button>
   </div>
 </header>
 
+<!-- HERO -->
 <section class="hero">
   <div>
-    <span class="pill">Sample Storefront</span>
-    <h1>Fast, clean & responsive e-commerce UI</h1>
-    <p class="muted">This is a demo for layout/UX only. Payments/checkout can be integrated on request (Stripe, COD, JazzCash, Easypaisa, etc.).</p>
-    <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:10px">
-      <span class="tag">Product Grid</span>
-      <span class="tag">Quick View</span>
-      <span class="tag">Local Cart</span>
-      <span class="tag">Filters</span>
-      <span class="tag">Responsive</span>
+    <h1>End-of-Season Sale ✨</h1>
+    <p class="sub">New arrivals & bestsellers. Up to 40% off on Fashion & Electronics. Shop the latest picks now.</p>
+    <div class="cta-row">
+      <button class="btn" id="shopFashion">Shop Fashion</button>
+      <button class="btn outline" id="shopElectronics">Shop Electronics</button>
+      <button class="btn" id="shopAll">View All</button>
+    </div>
+    <div class="trust">
+      <div class="item">🚚 Free Shipping  <span class="muted">on orders 3,000+</span></div>
+      <div class="item">🔒 Secure Checkout</div>
+      <div class="item">↩️ Easy Returns</div>
     </div>
   </div>
-  <img src="https://images.unsplash.com/photo-1520975916090-3105956dac38?q=80&w=1200&auto=format&fit=crop" alt="Hero" style="width:100%;border-radius:14px;object-fit:cover">
+  <img src="https://images.unsplash.com/photo-1520975916090-3105956dac38?q=80&w=1200&auto=format&fit=crop" alt="Hero">
 </section>
 
 <div class="filters" id="filters"></div>
-
 <main class="grid" id="grid"></main>
 
 <!-- Cart Panel -->
@@ -146,6 +130,7 @@
 </div>
 
 <script>
+/* Products */
 const PRODUCTS = [
   {id:1, name:"Floral Summer Dress", price:4999, cat:"Fashion", img:"images/Floral Summer Dress.jpg"},
   {id:2, name:"Wireless Earbuds", price:6999, cat:"Electronics", img:"images/Wireless Earbuds.jpg"},
@@ -154,7 +139,19 @@ const PRODUCTS = [
   {id:5, name:"Ceramic Mug Set", price:1999, cat:"Home", img:"images/Ceramic Mug Set.jpg"},
   {id:6, name:"Gaming Mouse", price:3499, cat:"Electronics", img:"images/Gaming Mouse.jpg"},
   {id:7, name:"Skincare Serum", price:2599, cat:"Beauty", img:"images/Skincare Serum.jpg"},
-  {id:8, name:"Minimal Backpack", price:5599, cat:"Fashion", img:"images/Minimal Backpack.jpg"}
+  {id:8, name:"Minimal Backpack", price:5599, cat:"Fashion", img:"images/Minimal Backpack.jpg"},
+  {id:9, name:"Smart Watch", price:10999, cat:"Electronics", img:"images/Smart Watch.jpg"},
+  {id:10, name:"Office Chair", price:15999, cat:"Home", img:"images/Office Chair.jpg"},
+  {id:11, name:"Denim Jacket", price:4999, cat:"Fashion", img:"images/Denim Jacket.jpg"},
+  {id:12, name:"Blender Machine", price:6999, cat:"Home", img:"images/Blender Machine.jpg"},
+  {id:13, name:"Perfume Spray", price:2499, cat:"Beauty", img:"images/Perfume Spray.jpg"},
+  {id:14, name:"Laptop Stand", price:3499, cat:"Electronics", img:"images/Laptop Stand.jpg"},
+  {id:15, name:"Yoga Mat", price:1999, cat:"Sports", img:"images/Yoga Mat.jpg"},
+  {id:16, name:"Casual T-shirt", price:1499, cat:"Fashion", img:"images/Casual T-shirt.jpg"},
+  {id:17, name:"Table Lamp", price:2999, cat:"Home", img:"images/Table Lamp.jpg"},
+  {id:18, name:"Headphones", price:7999, cat:"Electronics", img:"images/Headphones.jpg"},
+  {id:19, name:"Makeup Kit", price:5999, cat:"Beauty", img:"images/Makeup Kit.jpg"},
+  {id:20, name:"Travel Suitcase", price:12999, cat:"Fashion", img:"images/Travel Suitcase.jpg"}
 ];
 
 const cats=[...new Set(PRODUCTS.map(p=>p.cat))];
@@ -168,23 +165,20 @@ const cartCount=document.getElementById('cartCount');
 const fabCount=document.getElementById('fabCount');
 const openCartBtn=document.getElementById('openCart');
 const fab=document.getElementById('fab');
-
 let cart = JSON.parse(localStorage.getItem('demo_cart') || '{}');
 
 function format(n){ return "Rs " + n.toLocaleString('en-PK'); }
-
 function renderFilters(){
   const all = document.createElement('button');
   all.className='chip'; all.textContent='All';
-  all.onclick=()=>renderGrid(PRODUCTS);
+  all.onclick=()=>{ renderGrid(PRODUCTS); smoothToGrid(); };
   filters.appendChild(all);
   cats.forEach(c=>{
     const b=document.createElement('button'); b.className='chip'; b.textContent=c;
-    b.onclick=()=>renderGrid(PRODUCTS.filter(p=>p.cat===c));
+    b.onclick=()=>{ renderGrid(PRODUCTS.filter(p=>p.cat===c)); smoothToGrid(); };
     filters.appendChild(b);
   });
 }
-
 function renderGrid(list){
   grid.innerHTML='';
   list.forEach(p=>{
@@ -202,25 +196,15 @@ function renderGrid(list){
     grid.appendChild(card);
   });
 }
-
-function addToCart(id){
-  cart[id]=(cart[id]||0)+1;
-  persist(); renderCart(); bump();
-}
-
-function removeOne(id){
-  if(cart[id]){ cart[id]-=1; if(cart[id]<=0) delete cart[id]; persist(); renderCart(); }
-}
-
-function persist(){ localStorage.setItem('demo_cart', JSON.stringify(cart)); }
-
+function addToCart(id){cart[id]=(cart[id]||0)+1;persist();renderCart();bump();}
+function removeOne(id){if(cart[id]){cart[id]-=1;if(cart[id]<=0) delete cart[id];persist();renderCart();}}
+function persist(){localStorage.setItem('demo_cart', JSON.stringify(cart));}
 function renderCart(){
-  itemsEl.innerHTML='';
-  let total=0, count=0;
+  itemsEl.innerHTML='';let total=0,count=0;
   Object.entries(cart).forEach(([id,qty])=>{
-    const p=PRODUCTS.find(x=>x.id==id); if(!p) return;
-    total += p.price*qty; count += qty;
-    const row=document.createElement('div'); row.className='row';
+    const p=PRODUCTS.find(x=>x.id==id);if(!p) return;
+    total+=p.price*qty;count+=qty;
+    const row=document.createElement('div');row.className='row';
     row.innerHTML=`
       <img src="${p.img}" alt="${p.name}">
       <div style="flex:1">
@@ -228,45 +212,75 @@ function renderCart(){
         <div class="muted">${format(p.price)} × ${qty}</div>
       </div>
       <div class="qty">
-        <button class="btn" style="padding:6px 10px" aria-label="Decrease">−</button>
+        <button class="btn" style="padding:6px 10px">−</button>
         <span>${qty}</span>
-        <button class="btn" style="padding:6px 10px" aria-label="Increase">+</button>
+        <button class="btn" style="padding:6px 10px">+</button>
       </div>`;
     const [dec,,inc]=row.querySelectorAll('button');
-    dec.onclick=()=>removeOne(p.id);
-    inc.onclick=()=>addToCart(p.id);
+    dec.onclick=()=>removeOne(p.id);inc.onclick=()=>addToCart(p.id);
     itemsEl.appendChild(row);
   });
   subtotalEl.textContent=format(total);
-  cartCount.textContent=count;
-  fabCount.textContent=count;
+  cartCount.textContent=count;fabCount.textContent=count;
 }
-
-function bump(){ fab.animate([{transform:'scale(1)'},{transform:'scale(1.08)'},{transform:'scale(1)'}],{duration:220}); }
-
-q.addEventListener('input',()=>{
-  const s=q.value.toLowerCase();
-  renderGrid(PRODUCTS.filter(p=>p.name.toLowerCase().includes(s)));
+function bump(){fab.animate([{transform:'scale(1)'},{transform:'scale(1.08)'},{transform:'scale(1)'}],{duration:220});}
+function smoothToGrid(){window.scrollTo({top:grid.offsetTop-80,behavior:'smooth'});}
+q.addEventListener('input',()=>{const s=q.value.toLowerCase();renderGrid(PRODUCTS.filter(p=>p.name.toLowerCase().includes(s)));});
+document.addEventListener('DOMContentLoaded',()=>{
+  document.getElementById('shopFashion').onclick=()=>{renderGrid(PRODUCTS.filter(p=>p.cat==='Fashion'));smoothToGrid();};
+  document.getElementById('shopElectronics').onclick=()=>{renderGrid(PRODUCTS.filter(p=>p.cat==='Electronics'));smoothToGrid();};
+  document.getElementById('shopAll').onclick=()=>{renderGrid(PRODUCTS);smoothToGrid();};
 });
-
 document.getElementById('checkoutBtn').onclick=()=>alert('Demo checkout is disabled in sample. Full checkout is available in production builds.');
 document.getElementById('openCart').onclick=()=>panel.classList.add('open');
 fab.onclick=()=>panel.classList.toggle('open');
-
-renderFilters();
-renderGrid(PRODUCTS);
-renderCart();
+renderFilters();renderGrid(PRODUCTS);renderCart();
 </script>
 
-<footer style="max-width:1100px;margin:24px auto;padding:0 8px 40px">
-  <h3>Included in this Sample</h3>
-  <ul>
-    <li>Responsive layout (mobile-first)</li>
-    <li>Search + category filters</li>
-    <li>LocalStorage based cart</li>
-    <li>Quick, clean UI ready for brand customization</li>
-  </ul>
-  <p class="muted">Need: admin panel, inventory, orders, payments, shipping, coupons, multi-vendor? — Available on request.</p>
+<!-- Professional Footer -->
+<footer>
+  <div class="footer-content">
+    <div class="about">
+      <h3>Shopora</h3>
+      <p>Your one-stop destination for fashion, electronics, beauty & more. Bringing quality products to your doorstep with fast delivery.</p>
+    </div>
+    <div class="links">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Categories</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div class="customer">
+      <h4>Customer Service</h4>
+      <ul>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Shipping & Returns</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+      </ul>
+    </div>
+      <div class="social">
+      <h4>Follow Us</h4>
+      <p>
+        <a href="#">Facebook</a> | 
+        <a href="#">Instagram</a> | 
+        <a href="#">Twitter</a> | 
+        <a href="#">LinkedIn</a>
+      </p>
+    </div>
+  </div>
+
+  <div class="bottom-bar">
+    <p>&copy; 2025 TrendyMart. All Rights Reserved.</p>
+    <p>
+      <a href="#">Privacy Policy</a> | 
+      <a href="#">Terms & Conditions</a> | 
+      <a href="#">Help Center</a>
+    </p>
+  </div>
 </footer>
-</body>
-</html>
+
+
